Fix opening bookmarks from Chrome App menu.

This regressed in r518459 which added a step to clear out a stale
NSMenu tree once it could never be used again. But it turns out that
-[NSMenuDelegate menuDidClose:] is a bad signal for this. AppKit isn't
actually done with the menu at that point, and doesn't give the signal
we need.

To fix, keep the menu around as before, and improve test coverage.

Bug: 788430
Change-Id: Idbc19cb56e6e52d699d94518b2164d0bd776ce9d
Reviewed-on: https://chromium-review.googlesource.com/790090
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519835}
Former-commit-id: 5650735a52f82f914e143e5c97a806c5bf93efea